[New Feature][Add Cascade] Removes dependence on Grid

--- a/examples/screenshots/cascade.html
+++ b/examples/screenshots/cascade.html
@@ -11,11 +11,12 @@
 <body style="background: #fff;">
   <div style="width: 690px; margin: 0 auto; padding: 40px;">
 
-    <div class="rs-cascade rs-row-collapse">
-      <div class="rs-cascade-column span-2">
+    <h2>Default Example</h2>
+    <div class="rs-cascade">
+      <div class="rs-cascade-column" style="width: 20%;">
         <div class="rs-cascade-column-header">
           <a href="#" class="rs-sort rs-sort-asc">
-            <span class="rs-sort-text">Sorted Asc</span>
+            <span class="rs-sort-text ">Sorted Asc</span>
             <span class="rs-sort-indicator"></span>
           </a>
         </div>
@@ -48,7 +49,7 @@
           </ul>
         </div>
       </div>
-      <div class="rs-cascade-column span-3">
+      <div class="rs-cascade-column" style="width: 20%;">
         <div class="rs-cascade-column-header">
           <a href="#" class="rs-sort rs-sort-desc">
             <span class="rs-sort-text">Sorted Desc</span>
@@ -132,7 +133,287 @@
           </ul>
         </div>
       </div>
-      <div class="rs-cascade-column span-7">
+      <div class="rs-cascade-column" style="width: 60%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort">
+            <span class="rs-sort-text">Default</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-inner">
+            <h3>Content Header</h3>
+            <hr>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+      </div> 
+    </div>
+<br>
+<br>
+<h2>Short Example</h2>
+    <div class="rs-cascade rs-cascade-short">
+      <div class="rs-cascade-column" style="width: 20%">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-asc">
+            <span class="rs-sort-text">Sorted Asc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item selected">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Selected</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Truncated list item label</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item hover">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Hover</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item disabled">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Disabled</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 20%">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-desc">
+            <span class="rs-sort-text">Sorted Desc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item selected">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Selected</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item hover">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Hover</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item disabled">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Disabled</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Truncated list item label</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 8</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 9</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 10</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 11</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <div class="rs-cascade-list-item-label">Item 12</div>
+                <i class="rs-cascade-arrow"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 60%">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort">
+            <span class="rs-sort-text">Default</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-inner">
+            <h3>Content Header</h3>
+            <hr>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
+      </div> 
+    </div>
+<br>
+<br>
+<h2>Tall Example</h2>
+    <div class="rs-cascade rs-cascade-tall">
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-asc">
+            <span class="rs-sort-text">Sorted Asc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item selected">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Selected</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Truncated list item label</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item hover">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Hover</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item disabled">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Disabled</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-desc">
+            <span class="rs-sort-text">Sorted Desc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item selected">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Selected</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item hover">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Hover</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item disabled">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Disabled</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Truncated list item label</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 8</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 9</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 10</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 11</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <div class="rs-cascade-list-item-label">Item 12</div>
+                <i class="rs-cascade-arrow"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 60%;">
         <div class="rs-cascade-column-header">
           <a href="#" class="rs-sort">
             <span class="rs-sort-text">Default</span>
