--- a/examples/screenshots/cascade.html
+++ b/examples/screenshots/cascade.html
@@ -151,6 +151,338 @@
     </div>
 <br>
 <br>
+<h2>Loading Example</h2>
+    <div class="rs-cascade">
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-asc">
+            <span class="rs-sort-text ">Sorted Asc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-overlay rs-overlay-loading">
+            <div class="rs-overlay-content">
+              <div class="rs-overlay-message">Loading&hellip;</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-desc">
+            <span class="rs-sort-text">Sorted Desc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-overlay rs-overlay-loading">
+            <div class="rs-overlay-content">
+              <div class="rs-overlay-message">Loading&hellip;</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 60%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort">
+            <span class="rs-sort-text">Default</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-overlay rs-overlay-loading">
+            <div class="rs-overlay-content">
+              <div class="rs-overlay-message">Loading&hellip;</div>
+            </div>
+          </div>
+        </div>
+      </div> 
+    </div>
+<br>
+<br>
+<h2>Incomplete Selection Example</h2>
+    <div class="rs-cascade">
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-asc">
+            <span class="rs-sort-text ">Sorted Asc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 4</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-desc">
+            <span class="rs-sort-text">Sorted Desc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 4</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 5</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 6</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 7</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 8</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 9</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 10</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 11</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <div class="rs-cascade-list-item-label">Item 12</div>
+                <i class="rs-cascade-arrow"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 60%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort">
+            <span class="rs-sort-text">Default</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-overlay">
+            <div class="rs-overlay-content">
+              <div class="rs-overlay-title">Make a selection.</div>
+              <div class="rs-overlay-subtitle">Do it now!</div>
+              <div class="rs-overlay-message">Confused about this product? <a href="javascript:void(0);">Learn more here.<i class="rs-icon-external"></i></a></div>
+            </div>
+          </div>
+        </div>
+      </div> 
+    </div>
+<br>
+<br>
+<h2>Error State Example</h2>
+    <div class="rs-cascade">
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-asc">
+            <span class="rs-sort-text ">Sorted Asc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 4</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 20%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort rs-sort-desc">
+            <span class="rs-sort-text">Sorted Desc</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <ul class="rs-cascade-list">
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 1</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 2</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 3</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 4</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 5</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 6</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 7</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 8</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 9</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 10</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <i class="rs-cascade-arrow"></i>
+                <div class="rs-cascade-list-item-label">Item 11</div>
+              </div>
+            </li>
+            <li class="rs-cascade-list-item">
+              <div class="rs-cascade-list-item-content">
+                <div class="rs-cascade-list-item-label">Item 12</div>
+                <i class="rs-cascade-arrow"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-cascade-column" style="width: 60%;">
+        <div class="rs-cascade-column-header">
+          <a href="#" class="rs-sort">
+            <span class="rs-sort-text">Default</span>
+            <span class="rs-sort-indicator"></span>
+          </a>
+        </div>
+        <div class="rs-cascade-column-content">
+          <div class="rs-overlay rs-overlay-error">
+            <div class="rs-overlay-content">
+              <div class="rs-overlay-message"><i class="rs-icon-error-indicator"></i>Dang it&hellip; something borked!</div>
+            </div>
+          </div>
+        </div>
+      </div> 
+    </div>
+<br>
+<br>
 <h2>Short Example</h2>
     <div class="rs-cascade rs-cascade-short">
       <div class="rs-cascade-column" style="width: 20%">
