--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -147,68 +147,90 @@
   <!-- ACTION COG -->
   <!-- Button Tag -->
   <div class="rs-btn-group">
-    <button class="rs-cog"></button>
-    <button class="rs-cog active"></button>
-    <button class="rs-cog disabled"></button>
-    <button class="rs-cog hover"></button>
+    <button class="rs-cog">Actions</button>
+    <button class="rs-cog active">Actions</button>
+    <button class="rs-cog disabled">Actions</button>
+    <button class="rs-cog hover">Actions</button>
   </div>
   <!-- Input Tag -->
   <div class="rs-btn-group">
-    <input class="rs-cog" type="button">
-    <input class="rs-cog active" type="button">
-    <input class="rs-cog disabled" type="button">
-    <input class="rs-cog hover" type="button">
+    <input class="rs-cog" type="button" value="Actions">
+    <input class="rs-cog active" type="button" value="Actions">
+    <input class="rs-cog disabled" type="button" value="Actions">
+    <input class="rs-cog hover" type="button" value="Actions">
   </div>
   <!-- Anchor Tag -->
   <div class="rs-btn-group">
-    <a class="rs-cog"></a>
-    <a class="rs-cog active"></a>
-    <a class="rs-cog disabled"></a>
-    <a class="rs-cog hover"></a>
+    <a class="rs-cog">Actions</a>
+    <a class="rs-cog active">Actions</a>
+    <a class="rs-cog disabled">Actions</a>
+    <a class="rs-cog hover">Actions</a>
   </div>
   <!-- Edit Button -->
   <!-- Button Tag -->
   <div class="rs-btn-group">
-    <button class="rs-edit"></button>
-    <button class="rs-edit active"></button>
-    <button class="rs-edit disabled"></button>
-    <button class="rs-edit hover"></button>
+    <button class="rs-edit">Edit</button>
+    <button class="rs-edit active">Edit</button>
+    <button class="rs-edit disabled">Edit</button>
+    <button class="rs-edit hover">Edit</button>
   </div>
   <!-- Input Tag -->
   <div class="rs-btn-group">
-    <input class="rs-edit" type="button">
-    <input class="rs-edit active" type="button">
-    <input class="rs-edit disabled" type="button">
-    <input class="rs-edit hover" type="button">
+    <input class="rs-edit" type="button" value="Edit">
+    <input class="rs-edit active" type="button" value="Edit">
+    <input class="rs-edit disabled" type="button" value="Edit">
+    <input class="rs-edit hover" type="button" value="Edit">
   </div>
   <!-- Anchor Tag -->
   <div class="rs-btn-group">
-    <a class="rs-edit"></a>
-    <a class="rs-edit active"></a>
-    <a class="rs-edit disabled"></a>
-    <a class="rs-edit hover"></a>
+    <a class="rs-edit">Edit</a>
+    <a class="rs-edit active">Edit</a>
+    <a class="rs-edit disabled">Edit</a>
+    <a class="rs-edit hover">Edit</a>
   </div>
   <!-- Delete Button -->
   <!-- Button Tag -->
   <div class="rs-btn-group">
-    <button class="rs-delete"></button>
-    <button class="rs-delete active"></button>
-    <button class="rs-delete disabled"></button>
-    <button class="rs-delete hover"></button>
+    <button class="rs-delete">Delete</button>
+    <button class="rs-delete active">Delete</button>
+    <button class="rs-delete disabled">Delete</button>
+    <button class="rs-delete hover">Delete</button>
   </div>
   <!-- Input Tag -->
   <div class="rs-btn-group">
-    <input class="rs-delete" type="button">
-    <input class="rs-delete active" type="button">
-    <input class="rs-delete disabled" type="button">
-    <input class="rs-delete hover" type="button">
+    <input class="rs-delete" type="button" value="Delete">
+    <input class="rs-delete active" type="button" value="Delete">
+    <input class="rs-delete disabled" type="button" value="Delete">
+    <input class="rs-delete hover" type="button" value="Delete">
   </div>
   <!-- Anchor Tag -->
   <div class="rs-btn-group">
-    <a class="rs-delete"></a>
-    <a class="rs-delete active"></a>
-    <a class="rs-delete disabled"></a>
-    <a class="rs-delete hover"></a>
+    <a class="rs-delete">Delete</a>
+    <a class="rs-delete active">Delete</a>
+    <a class="rs-delete disabled">Delete</a>
+    <a class="rs-delete hover">Delete</a>
+  </div>
+  <!-- Plus Button -->
+  <!-- Button Tag -->
+  <div class="rs-btn-group">
+    <button class="rs-plus">Add</button>
+    <button class="rs-plus active">Add</button>
+    <button class="rs-plus disabled">Add</button>
+    <button class="rs-plus hover">Add</button>
+  </div>
+  <!-- Input Tag -->
+  <div class="rs-btn-group">
+    <input class="rs-plus" type="button" value="Add">
+    <input class="rs-plus active" type="button" value="Add">
+    <input class="rs-plus disabled" type="button" value="Add">
+    <input class="rs-plus hover" type="button" value="Add">
+  </div>
+  <!-- Anchor Tag -->
+  <div class="rs-btn-group">
+    <a class="rs-plus">Add</a>
+    <a class="rs-plus active">Add</a>
+    <a class="rs-plus disabled">Add</a>
+    <a class="rs-plus hover">Add</a>
   </div>
 </body>
 </html>
