--- a/examples/screenshots/embedded-list-table.html
+++ b/examples/screenshots/embedded-list-table.html
@@ -18,6 +18,7 @@
             <th class="rs-table-checkbox"><input type="checkbox"></th>
             <th class="rs-table-cog"></th>
             <th class="rs-table-radio"></th>
+            <th class="rs-table-edit"></th>
             <th class="rs-table-delete"></th>
             <th>
               <a href="#" class="rs-table-sort">
@@ -63,6 +64,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Hover</td>
             <td class="rs-table-select">
@@ -82,6 +84,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection" checked></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Selected</td>
             <td class="rs-table-select">
@@ -101,6 +104,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -120,6 +124,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -139,6 +144,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -158,6 +164,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -177,6 +184,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -196,6 +204,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -215,6 +224,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -234,6 +244,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -247,6 +258,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -260,6 +272,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -273,6 +286,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -286,6 +300,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -299,6 +314,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-edit"></td>
             <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
