--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -18,6 +18,7 @@
             <th class="rs-table-checkbox"><input type="checkbox"></th>
             <th class="rs-table-cog"></th>
             <th class="rs-table-radio"></th>
+            <th class="rs-table-edit"></th>
             <th class="rs-table-delete"></th>
             <th>
               <a href="#" class="rs-table-sort">
@@ -63,6 +64,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Hover</td>
             <td class="rs-table-select">
@@ -121,6 +123,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection" checked></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Selected</td>
             <td class="rs-table-select">
@@ -197,6 +200,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -255,6 +259,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -313,6 +318,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -371,6 +377,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -429,6 +436,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -487,6 +495,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -545,6 +554,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -603,6 +613,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
@@ -661,6 +672,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-edit"><button class="rs-edit"></button></td>
             <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
