[New Feature][Selector] Adds Selector Button markup to buttons.html

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -144,6 +144,53 @@
       <span class="rs-caret"></span>
     </a>
   </div>
+  <!-- SELECTOR BUTTONS -->
+  <!-- Button Tag -->
+  <div class="rs-btn-group">
+    <button class="rs-btn rs-btn-selector">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Default</span>
+      <span class="rs-caret"></span>
+    </button>
+    <button class="rs-btn rs-btn-selector active">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Active</span>
+      <span class="rs-caret"></span>
+    </button>
+    <button class="rs-btn rs-btn-selector disabled">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Disabled</span>
+      <span class="rs-caret"></span>
+    </button>
+    <button class="rs-btn rs-btn-selector hover">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Hover</span>
+      <span class="rs-caret"></span>
+    </button>
+  </div>
+  <!-- Anchor Tag -->
+  <div class="rs-btn-group">
+    <a class="rs-btn rs-btn-selector">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Default</span>
+      <span class="rs-caret"></span>
+    </a>
+    <a class="rs-btn rs-btn-selector active">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Active</span>
+      <span class="rs-caret"></span>
+    </a>
+    <a class="rs-btn rs-btn-selector disabled">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Disabled</span>
+      <span class="rs-caret"></span>
+    </a>
+    <a class="rs-btn rs-btn-selector hover">
+      <span class="rs-location"></span>
+      <span class="rs-selector-label">Hover</span>
+      <span class="rs-caret"></span>
+    </a>
+  </div>
   <!-- ACTION COG -->
   <!-- Button Tag -->
   <div class="rs-btn-group">
