[New Feature][Selector] Adds selector markup to menu.html

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -103,6 +103,178 @@
         <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
+    <div class="rs-dropdown rs-selector">
+      <a href="#" class="rs-btn rs-dropdown-toggle">
+        <span class="rs-selector-label">
+        Selector Menu (Hidden)
+        </span>
+      </a>
+      <ul class="rs-dropdown-menu rs-selector-group">
+        <li class="rs-dropdown-item">
+          <a class="rs-dropdown-link rs-selector-group-header" href="#">
+            <i class="rs-checkmark"></i>
+            <span class="rs-dropdown-link-label">First-Level Header</span></a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Second-Level Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Third-Level Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header hover" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Hovered Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item hover">
+                    <a class="rs-dropdown-link hover" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Hovered Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header selected" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link selected" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Selected Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header selected active" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link selected active" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-selector-group-header disabled" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Disabled Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item disabled">
+                    <a class="rs-dropdown-link disabled" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Disabled Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    <div class="rs-dropdown rs-selector">
+      <a href="#" class="rs-btn rs-dropdown-toggle">
+        <span class="rs-selector-label">
+          Selector Menu (Visible)
+        </span>
+      </a>
+      <ul class="rs-dropdown-menu rs-selector-group visible">
+        <li class="rs-dropdown-item">
+          <a class="rs-dropdown-link rs-selector-group-header" href="#">
+            <i class="rs-checkmark"></i>
+            <span class="rs-dropdown-link-label">First-Level Header</span>
+          </a>
+          <ul class="rs-selector-group">
+            <li class="rs-dropdown-item">
+              <a class="rs-dropdown-link rs-selector-group-header" href="#">
+                <i class="rs-checkmark"></i>
+                <span class="rs-dropdown-link-label">Second-Level Header</span>
+              </a>
+              <ul class="rs-selector-group">
+                <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Third-Level Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header hover" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Hovered Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item hover">
+                <a class="rs-dropdown-link hover" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Hovered Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header selected" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Selected Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link selected" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header selected active" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link selected active" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-selector-group-header disabled" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Disabled Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item disabled">
+                <a class="rs-dropdown-link disabled" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Disabled Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
     <div style="margin-top: 450px;"></div>
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
@@ -196,6 +368,178 @@
         <li class="rs-dropdown-item disabled"><a href="#" class="rs-dropdown-link hover">Disabled (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
+    <div class="rs-dropdown rs-selector">
+      <a href="#" class="rs-btn rs-dropdown-toggle">
+        <span class="rs-selector-label">
+        Selector Menu (Hidden)
+        </span>
+      </a>
+      <ul class="rs-dropdown-menu rs-selector-group rs-pull-right">
+        <li class="rs-dropdown-item">
+          <a class="rs-dropdown-link rs-selector-group-header" href="#">
+            <i class="rs-checkmark"></i>
+            <span class="rs-dropdown-link-label">First-Level Header</span></a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Second-Level Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Third-Level Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header hover" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Hovered Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item hover">
+                    <a class="rs-dropdown-link hover" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Hovered Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header selected" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link selected" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Selected Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link rs-selector-group-header selected active" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item">
+                    <a class="rs-dropdown-link selected active" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="rs-dropdown-item">
+                <a class="rs-selector-group-header disabled" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Disabled Header</span>
+                </a>
+                <ul class="rs-selector-group">
+                  <li class="rs-dropdown-item disabled">
+                    <a class="rs-dropdown-link disabled" href="#">
+                      <i class="rs-checkmark"></i>
+                      <span class="rs-dropdown-link-label">Disabled Item</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    <div class="rs-dropdown rs-selector">
+      <a href="#" class="rs-btn rs-dropdown-toggle">
+        <span class="rs-selector-label">
+          Selector Menu (Visible)
+        </span>
+      </a>
+      <ul class="rs-dropdown-menu rs-selector-group visible rs-pull-right">
+        <li class="rs-dropdown-item">
+          <a class="rs-dropdown-link rs-selector-group-header" href="#">
+            <i class="rs-checkmark"></i>
+            <span class="rs-dropdown-link-label">First-Level Header</span>
+          </a>
+          <ul class="rs-selector-group">
+            <li class="rs-dropdown-item">
+              <a class="rs-dropdown-link rs-selector-group-header" href="#">
+                <i class="rs-checkmark"></i>
+                <span class="rs-dropdown-link-label">Second-Level Header</span>
+              </a>
+              <ul class="rs-selector-group">
+                <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Third-Level Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header hover" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Hovered Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item hover">
+                <a class="rs-dropdown-link hover" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Hovered Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header selected" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Selected Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link selected" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-dropdown-link rs-selector-group-header selected active" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item">
+                <a class="rs-dropdown-link selected active" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="rs-dropdown-item">
+            <a class="rs-selector-group-header disabled" href="#">
+              <i class="rs-checkmark"></i>
+              <span class="rs-dropdown-link-label">Disabled Header</span>
+            </a>
+            <ul class="rs-selector-group">
+              <li class="rs-dropdown-item disabled">
+                <a class="rs-dropdown-link disabled" href="#">
+                  <i class="rs-checkmark"></i>
+                  <span class="rs-dropdown-link-label">Disabled Item</span>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
     <div style="margin-top: 450px;"></div>
   </div>
 </body>
