[New Feature][Selector] Fixes markup problem with menu screenshot html

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -199,60 +199,60 @@
         <li class="rs-dropdown-item">
           <a class="rs-selector-link rs-selector-group-header" href="#">
             <i class="rs-checkmark"></i>
-            <span class="rs-dropdown-link-label">First-Level Header</span>
+            <span class="rs-selector-link-label">First-Level Header</span>
           </a>
           <ul class="rs-selector-group">
             <li class="rs-dropdown-item">
-              <a class="rs-dropdown-link rs-selector-group-header" href="#">
+              <a class="rs-selector-link rs-selector-group-header" href="#">
                 <i class="rs-checkmark"></i>
-                <span class="rs-dropdown-link-label">Second-Level Header</span>
+                <span class="rs-selector-link-label">Second-Level Header</span>
               </a>
               <ul class="rs-selector-group">
-                <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">
+                <li class="rs-dropdown-item"><a class="rs-selector-link" href="#">
                   <i class="rs-checkmark"></i>
-                  <span class="rs-dropdown-link-label">Third-Level Item</span>
+                  <span class="rs-selector-link-label">Third-Level Item</span>
                 </a>
               </li>
             </ul>
           </li>
           <li class="rs-dropdown-item">
-            <a class="rs-dropdown-link rs-selector-group-header hover" href="#">
+            <a class="rs-selector-link rs-selector-group-header hover" href="#">
               <i class="rs-checkmark"></i>
-              <span class="rs-dropdown-link-label">Hovered Header</span>
+              <span class="rs-selector-link-label">Hovered Header</span>
             </a>
             <ul class="rs-selector-group">
               <li class="rs-dropdown-item hover">
-                <a class="rs-dropdown-link hover" href="#">
+                <a class="rs-selector-link hover" href="#">
                   <i class="rs-checkmark"></i>
-                  <span class="rs-dropdown-link-label">Hovered Item</span>
+                  <span class="rs-selector-link-label">Hovered Item</span>
                 </a>
               </li>
             </ul>
           </li>
           <li class="rs-dropdown-item">
-            <a class="rs-dropdown-link rs-selector-group-header selected" href="#">
+            <a class="rs-selector-link rs-selector-group-header selected" href="#">
               <i class="rs-checkmark"></i>
-              <span class="rs-dropdown-link-label">Selected Header</span>
+              <span class="rs-selector-link-label">Selected Header</span>
             </a>
             <ul class="rs-selector-group">
               <li class="rs-dropdown-item">
-                <a class="rs-dropdown-link selected" href="#">
+                <a class="rs-selector-link selected" href="#">
                   <i class="rs-checkmark"></i>
-                  <span class="rs-dropdown-link-label">Selected Item</span>
+                  <span class="rs-selector-link-label">Selected Item</span>
                 </a>
               </li>
             </ul>
           </li>
           <li class="rs-dropdown-item">
-            <a class="rs-dropdown-link rs-selector-group-header selected active" href="#">
+            <a class="rs-selector-link rs-selector-group-header selected active" href="#">
               <i class="rs-checkmark"></i>
-              <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+              <span class="rs-selector-link-label">Selected Active/Hover</span>
             </a>
             <ul class="rs-selector-group">
               <li class="rs-dropdown-item">
-                <a class="rs-dropdown-link selected active" href="#">
+                <a class="rs-selector-link selected active" href="#">
                   <i class="rs-checkmark"></i>
-                  <span class="rs-dropdown-link-label">Selected Active/Hover</span>
+                  <span class="rs-selector-link-label">Selected Active/Hover</span>
                 </a>
               </li>
             </ul>
@@ -260,13 +260,13 @@
           <li class="rs-dropdown-item">
             <a class="rs-selector-group-header disabled" href="#">
               <i class="rs-checkmark"></i>
-              <span class="rs-dropdown-link-label">Disabled Header</span>
+              <span class="rs-selector-link-label">Disabled Header</span>
             </a>
             <ul class="rs-selector-group">
               <li class="rs-dropdown-item disabled">
-                <a class="rs-dropdown-link disabled" href="#">
+                <a class="rs-selector-link disabled" href="#">
                   <i class="rs-checkmark"></i>
-                  <span class="rs-dropdown-link-label">Disabled Item</span>
+                  <span class="rs-selector-link-label">Disabled Item</span>
                 </a>
               </li>
             </ul>
