--- a/examples/screenshots/detail-view.html
+++ b/examples/screenshots/detail-view.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section expanded">
-      <div class="rs-detail-section-header">
+      <div class="rs-detail-section-header" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Expanded</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section expanded">
-      <div class="rs-detail-section-header hover">
+      <div class="rs-detail-section-header hover" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Expanded (Hover)</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section collapsed">
-      <div class="rs-detail-section-header">
+      <div class="rs-detail-section-header" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Collapsed</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
@@ -112,7 +112,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section collapsed">
-      <div class="rs-detail-section-header hover">
+      <div class="rs-detail-section-header hover" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Collapsed (Hover)</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
@@ -135,7 +135,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section loading">
-      <div class="rs-detail-section-header">
+      <div class="rs-detail-section-header" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Loading</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
@@ -158,7 +158,7 @@
       </div>
     </div>
     <div class="rs-collapsible-section rs-detail-section loading">
-      <div class="rs-detail-section-header hover">
+      <div class="rs-detail-section-header hover" tabindex="0">
         <div class="rs-caret"></div>
         <div class="rs-detail-section-title">Loading (Hover)</div>
         <div class="rs-detail-section-subtitle">This is a description.</div>
