--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -554,7 +554,7 @@
                 <option>Three</option>
               </select>
             </td>
-            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text"><button class="rs-btn rs-btn-link">Body</button></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
             <td class="rs-table-status-list">
