--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -86,10 +86,10 @@
                     <h4 class="rs-quiet rs-dropdown-category">Cloud Servers</h4>
                     <ul class="rs-nav-menu-items">
                       <li class="rs-nav-menu-item">
-                        <a href="https://mycloud.rackspace.com/cloud/934922/servers" class="rs-dropdown-link active" data-subnav="servers">Cloud Servers</a>
+                        <a href="https://mycloud.rackspace.com/cloud/934922/servers" data-subnav="servers">Cloud Servers</a>
                       </li>
                       <li class="rs-nav-menu-item">
-                        <a href="https://mycloud.rackspace.com/cloud/934922/servers#images" class="rs-dropdown-link" data-subnav="images">Saved Images</a>
+                        <a href="https://mycloud.rackspace.com/cloud/934922/servers#images" class="rs-dropdown-text" data-subnav="images">Saved Images</a>
                       </li>
                       <li class="rs-nav-menu-item">
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#auto-scale" class="rs-dropdown-link" data-subnav="auto-scale">Auto Scale</a>
@@ -101,7 +101,7 @@
                         <a href="https://mycloud.rackspace.com/cloud/934922/queues" class="rs-dropdown-link" data-subnav="queues">Message Queueing</a>
                       </li>
                       <li class="rs-nav-menu-item">
-                        <a href="https://intelligence.rackspace.com" class="rs-dropdown-link" data-subnav="cloud-intelligence" target="_blank">Cloud Intelligence<i class="rs-icon-external pilot-img-external-link"></i></a>
+                        <a href="https://intelligence.rackspace.com" class="rs-dropdown-link" data-subnav="cloud-intelligence" target="_blank">Cloud Intelligence<i class="rs-icon-external"></i></a>
                       </li>
                     </ul>
                   </div>
