adds caption styles for popover nav

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -98,10 +98,16 @@
                         <a href="https://mycloud.rackspace.com/cloud/934922/servers#ssh-keys" class="rs-dropdown-link" data-subnav="ssh-keys">SSH Keys</a>
                       </li>
                       <li class="rs-nav-menu-item">
-                        <a href="https://mycloud.rackspace.com/cloud/934922/queues" class="rs-dropdown-link" data-subnav="queues">Message Queueing</a>
-                      </li>
-                      <li class="rs-nav-menu-item">
                         <a href="https://intelligence.rackspace.com" class="rs-dropdown-link" data-subnav="cloud-intelligence" target="_blank">Cloud Intelligence<i class="rs-icon-external"></i></a>
+                      </li>
+                    </ul>
+                    <h4 class="rs-quiet rs-dropdown-category">Cloud Servers</h4>
+                    <ul class="rs-nav-menu-items">
+                      <li class="rs-nav-menu-item">
+                        <a href="https://mycloud.rackspace.com/cloud/934922/servers#big-data" class="rs-dropdown-link" data-subnav="big-data">
+                          Big Data
+                        </a>
+                        <div class="rs-dropdown-caption">Powered by Apache<span class="super-script">™</span> Hadoop<span class="super-script">®</span></div>
                       </li>
                     </ul>
                   </div>
@@ -126,7 +132,7 @@
           <li class="rs-nav-item rs-dropdown rs-primary-dropdown disabled">
             <span class="rs-nav-link">Link Four <i class="rs-caret"></i></span>
           </li>
-          <li class="rs-nav-item rs-dropdown rs-primary-dropdown disabled">
+          <li class="rs-nav-item rs-dropdown rs-primary-dropdown">
             <span class="rs-nav-link">Link Five <i class="rs-caret"></i></span>
             <ul class="rs-dropdown-menu visible">
               <li class="rs-dropdown-item"><span class="rs-dropdown-category">Links</span></li>
